err/digphoneextractor.err
Listing '.'...
Listing './bin'...
Compiling './bin/jsonpath.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/digExtractor'...
Compiling './lib/python3.5/site-packages/digExtractor/extractor_processor.py'...
***   File "./lib/python3.5/site-packages/digExtractor/extractor_processor.py", line 167
    print "input_fields failed {}".format(self.input_fields)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/digExtractor-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/digPhoneExtractor'...
Listing './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher'...
Listing './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core'...
Listing './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/common'...
Compiling './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/extractor.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/extractor.py", line 85
    print Extractor().extract(text)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/preprocessor.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/preprocessor.py", line 87
    print preprocessor.preprocess(sample)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/validator.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/core/validator.py", line 26
    except NumberParseException, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/res'...
Listing './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/res/area_code'...
Compiling './lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/res/area_code/__init__.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/pnmatcher/res/area_code/__init__.py", line 16
    print get_all_country_iso_two_letter_code()
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digPhoneExtractor/test.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/test.py", line 22
    print json.dumps(ph.add_ons, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digPhoneExtractor/twilio_api.py'...
***   File "./lib/python3.5/site-packages/digPhoneExtractor/twilio_api.py", line 60
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digPhoneExtractor-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/digSparkUtil'...
Compiling './lib/python3.5/site-packages/digSparkUtil/ESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/ESUtil.py", line 16
    print jsonObj
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/convertToSeq.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/convertToSeq.py", line 17
    print "Got options:", c_options
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/fileUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/fileUtil.py", line 180
    rdd_json = rdd.map(lambda (k, v): FileUtil.__dump_as_json(k, v, separator))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/hbase_manager.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/hbase_manager.py", line 20
    print self.hbase_conf
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/jsonUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/jsonUtil.py", line 166
    print list(JSONUtil.extract_values_from_path(jsonObj1, "assignee.assignee"))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/digSparkUtil/seq2tsv.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/seq2tsv.py", line 12
    print 'usage: seq2tsv <filename>'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/digSparkUtil/testESUtil.py'...
***   File "./lib/python3.5/site-packages/digSparkUtil/testESUtil.py", line 4
    print "### NO PYSPARK"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digSparkUtil-1.0.23.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw'...
Listing './lib/python3.5/site-packages/jsonpath_rw/bin'...
Listing './lib/python3.5/site-packages/jsonpath_rw-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext/tests'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext-1.1.3.dist-info'...
Listing './lib/python3.5/site-packages/nose2'...
Listing './lib/python3.5/site-packages/nose2/plugins'...
Listing './lib/python3.5/site-packages/nose2/plugins/loader'...
Listing './lib/python3.5/site-packages/nose2/tests'...
Listing './lib/python3.5/site-packages/nose2/tests/functional'...
Listing './lib/python3.5/site-packages/nose2/tests/unit'...
Listing './lib/python3.5/site-packages/nose2/tools'...
Listing './lib/python3.5/site-packages/nose2-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/phonenumbers'...
Listing './lib/python3.5/site-packages/phonenumbers/carrierdata'...
Listing './lib/python3.5/site-packages/phonenumbers/data'...
Listing './lib/python3.5/site-packages/phonenumbers/geodata'...
Listing './lib/python3.5/site-packages/phonenumbers/shortdata'...
Listing './lib/python3.5/site-packages/phonenumbers/tzdata'...
Listing './lib/python3.5/site-packages/phonenumbers-8.8.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_file-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/groundtruth'...
Compiling './lib/python3.5/site-packages/test/groundtruth/__init__.py'...
***   File "./lib/python3.5/site-packages/test/groundtruth/__init__.py", line 19
    print load_groundtruth()[0:10]
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
